--- a/lloyd kitchen.css
+++ b/lloyd kitchen.css
@@ -11,7 +11,7 @@ figcaption {
 body {
   color: #666666;
   background-color: #f9f8f6;
-  background-image: url("../image/wall.jpg");
+  background-image: url("image/wall.jpg");
   background-position: center;
   font-family: Georgia, Times, serif;
   line-height: 1.4em;
@@ -25,7 +25,7 @@ body {
 }
 header {
   height: 160px;
-  background-image: url("../image/lloyd\ name.jpg");
+  background-image: url("image/lloyd\ name.jpg");
   background-repeat: no-repeat;
   background-color: #990000;
 }
