--- a/lloyd kitchen.css
+++ b/lloyd kitchen.css
@@ -25,7 +25,7 @@ body {
 }
 header {
   height: 160px;
-  background-image: url("image/lloyd\ name.jpg");
+  background-image: url("image/lloyd name.jpg");
   background-repeat: no-repeat;
   background-color: #990000;
 }
